[Refactor] PR 피드백 반영 업데이트 - 매직 넘버 제거  -- Validation을 위한 Class를 분리하여 해당 클래스에 final로 적용 - Lombok을 통한 Getter, Setter 적용 - Custom Exception 적용 - Validator class 분리  -- 분리에 따른 추가 Class 분할 필요 없음으로 판단함에 따라 ServerName, UserName, Nickname class 삭제 및 Name 클래스로 대체 - JavaApplication 구현체로 불러온 부분 인터페이스로 변경